--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,7 @@ Temporary Items
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
-
+.idea
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
@@ -116,4 +116,4 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-
+.idea/
