--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'Spring-MSA'
 include 'config-server'
 include 'licensing-service'
+include 'organization-service'
+include 'eureka-server'
