--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       server:
         git:
           uri: https://github.com/DongmyeongLee22/config-repository
-          search-paths: training/licensingservice
+          search-paths: training/licensingservice,training/organizationservice
 
 
 management:
